[gd_scene load_steps=3 format=2]

[ext_resource path="res://aa0001.gd" type="Script" id=1]
[ext_resource path="res://BaseActionOption.tscn" type="PackedScene" id=2]

[node name="aa0001" type="Node2D"]
position = Vector2( 1.39743, 0.937286 )
script = ExtResource( 1 )

[node name="OptionOne" parent="." instance=ExtResource( 2 )]
position = Vector2( -0.943878, -125.535 )

[node name="OptionTwo" parent="." instance=ExtResource( 2 )]
position = Vector2( -2.00331, 1.0048 )

[node name="OptionThree" parent="." instance=ExtResource( 2 )]
position = Vector2( -0.506546, 129.31 )

[connection signal="option_selected" from="OptionOne" to="." method="_on_Option_option_selected"]
[connection signal="option_selected" from="OptionTwo" to="." method="_on_Option_option_selected"]
[connection signal="option_selected" from="OptionThree" to="." method="_on_Option_option_selected"]
